--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded" style="background-image:url('images/demo/backgrounds/firstImage.jpg') ;"> 
+<div class="bgded" style="background-image:url('images/demo/backgrounds/firstImage.jpg');background-repeat: no-repeat;background-attachment: fixed;background-size: cover;"> 
   <!-- ################################################################################################ -->
   <div class="wrapper row1">
     <header id="header" class="hoc clear">
@@ -43,18 +43,18 @@
       <nav id="mainav" class="fl_right"> 
         <!-- ################################################################################################ -->
         <ul class="clear">
-          <li class="active"><a href="index.html">Home</a></li>
-          <li class="Drop"><a href="aboutPage.html">About Us</a>
+          <li class="navbarcheck"><a href="index.html">Home</a></li>
+          <li class="Drop"><a href="aboutus.html">About Us</a>
             <ul>
-              <li><a href="history.html">History</a></li>
-              <li><a href="ethicalCodes.html">Ethical Codes</a></li>
-              <li><a href="commitments.html">Commitments</a></li>
-              <li><a href="sr.html">Social Responsibilities</a></li>
-              <li><a href="tnc.html">Terms and Conditions</a></li>
+              <li><a href="aboutus.html#history">History</a></li>
+              <li><a href="aboutus.html#code-of-conduct">Ethical Codes</a></li>
+              <li><a href="aboutus.html#commitments">Commitments</a></li>
+              <li><a href="aboutus.html#social-responsibilities">Social Responsibilities</a></li>
+              <li><a href="aboutus.html#tnc">Terms and Conditions</a></li>
             </ul>
           </li>
-          <li class="active"><a href="products.html">Products</a></li>
-          <li class="active"><a href="operating.html">Operating System</a></li> 
+          <li class="navbarcheck"><a href="products.html">Products</a></li>
+          <li class="navbarcheck"><a href="operating.html">Operating System</a></li> 
         </li>
         </ul>
         <!-- ###########################jsdgkldjvnjxcv m, v m,vnxlkvxmzv############################################## -->
